@@ -74,6 +74,13 @@ EXPORT_SYMBOL int HX_rand(void)
 	return rand();
 }
 
+EXPORT_SYMBOL double HX_drand(double lo, double hi)
+{
+	double delta = hi - lo;
+
+	return static_cast(double, HX_rand()) * delta / RAND_MAX + lo;
+}
+
 EXPORT_SYMBOL unsigned int HX_irand(unsigned int lo, unsigned int hi)
 {
 	unsigned int delta = hi - lo;
